--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 /node_modules
-/public/hot
-/public/storage
+/public
 /storage/*.key
 /vendor
+/.vagrant
 .env
 .env.backup
 .phpunit.result.cache
+.idea
 npm-debug.log
 yarn-error.log
