--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
+        "jquery": "^3.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.15",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.2",
-        "sass-loader": "^8.0.2"
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.11"
     }
 }
